# mms_server_linux

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_linux_for_win.sh  build_win.bat  gen.sh  install.sh  setup.sh  static_model.c  static_model.h
scripts/: gen.sh  setup.sh
scripts/ubuntu/: build_MIPS.sh  build_UBUNTU.sh  build_WIN.sh  choice.sh
src/: main.c  model.icd  static_model.c  static_model.h
